[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/powerups/Powerup_Test.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/frame_normal_28.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/highlight_28.png" type="Texture" id=3]

[node name="TextureRect" type="TextureRect"]
anchor_left = 0.474
anchor_top = 0.454
anchor_right = 0.526
anchor_bottom = 0.546
margin_left = -0.0800781
margin_top = -0.320038
margin_right = 0.0799561
margin_bottom = 0.320007
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = 2.0
margin_right = 72.0
margin_bottom = 44.0
text = "(x, y)"
align = 1

[node name="Icon" type="TextureRect" parent="."]
anchor_left = 0.22
anchor_top = 0.22
anchor_right = 0.78
anchor_bottom = 0.78
expand = true
stretch_mode = 6

[node name="Highlight" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[connection signal="gui_input" from="." to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureRect_mouse_exited"]
